# theStackControversy

./: .gitignore  CMakeLists.txt  README.md
libstackcollection/: CMakeLists.txt
libstackcollection/stackcollection/: ArrayContainer.cpp  ArrayContainer.hpp  ArrayStack.cpp  ArrayStack.hpp  IStack.hpp  ListContainer.cpp  ListContainer.hpp  ListStack.cpp  ListStack.hpp  RBTreeContainer.cpp  RBTreeContainer.hpp  RBTreeStack.cpp  RBTreeStack.hpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/src/: test_array.cpp  test_list.cpp  test_rbtree.cpp  test_stack.cpp
